--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/images/icons/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://kit.fontawesome.com/c418327c57.js" crossorigin="anonymous"></script>
-  <title>BeiliHub — Learn whatever you want</title>
+  <title>BeiliHub</title>
 </head>
 
 <body>
